<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="211dp"
        android:layout_height="124dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="77dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="no"
        android:background="@android:color/transparent"
        android:foreground="@android:color/transparent"
        android:gravity="clip_horizontal|center|clip_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="@dimen/marginStart"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/lowWhite"
            android:textColorHint="@color/colorHint"
            android:textSize="@dimen/normalSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/marginStart"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/second_name"
            android:inputType="textPersonName"
            android:textColor="@color/pureWhite"
            android:textColorHint="@color/colorHint"
            android:textSize="@dimen/normalSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fname" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/marginStart"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/pureWhite"
            android:textColorHint="@color/colorHint"
            android:textSize="@dimen/normalSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lname" />

        <EditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/marginStart"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textColor="@color/pureWhite"
            android:textColorHint="@color/colorHint"
            android:textSize="@dimen/normalSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dob" />


        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/marginStart"
            android:autofillHints=""
            android:background="@drawable/round_border"
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:textAlignment="center"
            android:textColor="@color/pureWhite"
            android:textColorHint="@color/lowWhite"
            android:textSize="@dimen/normalSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <RadioGroup
            android:id="@+id/genderRG"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/marginStart"
            android:background="@android:color/transparent"
            android:foreground="@android:color/transparent"
            android:gravity="end"
            android:orientation='horizontal'
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dob">

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/radioMargin"
                android:layout_weight="1"
                android:text="@string/male"
                android:textAlignment="center"
                android:textColor="@color/pureWhite"
                android:textSize="@dimen/normalSize" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/radioMargin"
                android:layout_weight="1"
                android:text="@string/female"
                android:textAlignment="center"
                android:textColor="@color/pureWhite"
                android:textSize="@dimen/normalSize" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/radioMargin"
                android:layout_weight="1"
                android:text="@string/other"
                android:textAlignment="center"
                android:textColor="@color/pureWhite"
                android:textSize="@dimen/normalSize" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/marginStart"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_border_light"
        android:text="@string/sign_up"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RelativeLayout
        android:id="@+id/relLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:foreground="@android:color/transparent"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:id="@+id/your_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="center">

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>